# OrderRun-BE

./: .dockerignore  .env.ec2.example  .env.example  .env.staging.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  README_EMAIL.md  docker-compose.ec2.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.py
.codex/prompts/: python-fastapi-mentor.md
.github/workflows/: staging-deploy.yml
alembic/: env.py
app/: __init__.py  main.py
app/core/: config.py  time.py  (+8 more)
docs/: DESIGN.md  DIRECTORY_STRUCTURE.md  FRONTEND.md  GETTING_STARTED.md  HARNESS_ENGINEERING.md  ITERATION_FRAMEWORK.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  domain.md  fcm-notification-guide.md
migrations/: add_payment_fields_to_proposals.sql  remove_user_role_add_is_admin.sql
nginx/: Dockerfile
scripts/: deploy.sh  init-db.sql  install-logrotate.sh  staging-smoke-test.sh
tests/: conftest.py  factories.py  test_admin_integration.py  test_config.py  test_dispute_evidence_integration.py  test_dispute_survey_integration.py  test_email_service.py  test_errors.py  test_health_integration.py  test_mission_integration.py  test_notification_integration.py  test_oauth_integration.py  test_offer_integration.py  test_openapi.py  test_phone_verification.py  test_proposal_integration.py  test_proposal_report_integration.py  test_settlement_integration.py  test_sms_service.py  test_terms_agreement_integration.py  test_timestamps.py  test_user_auth_integration.py  test_user_profile_integration.py
(+247 files in other folders)
